--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Practice CSS Master class(Nomadcoder Academy)",
   "scripts": {
-    "dev": "gulp dev"
+    "dev": "gulp dev",
+    "deploy": "gulp deploy"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,9 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-csso": "^4.0.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-sass": "^4.1.0",
+    "gulp-webserver": "^0.9.1",
     "node-sass": "^4.14.1"
   },
   "browserslist": {
